AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = \
1leftarrow.png \
1rightarrow.png \
attach.png \
fileclose.png \
filenew.png \
filesaveas.png \
filesave.png \
fonts.png \
homeB.png \
html.png \
info.png \
text_bold.png \
text_italic.png \
text_strike.png \
text_under.png \
view_left_right.png \
view_remove.png \
view_top_bottom.png \
window_fullscreen.png
