AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = \
	arrow-left.png \
	arrow-right.png \
	attach.png \
	document-close.png \
	document-new.png \
	document-print-preview.png \
	document-save.png \
	document-save-as.png \
	tools-check-spelling.png \
	go-home.png \
	info.png \
	format-text-bold.png \
	format-text-italic.png \
	format-text-strikethrough.png \
	format-text-underline.png \
	view-close.png \
	view-fullscreen.png \
	view-list-tree.png \
	view-split-left-right.png \
	view-split-top-bottom.png
