AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = \
attach.png \
configure-backups.png \
document-close.png \
document-new.png \
document-save.png \
document-save-as.png \
tools-check-spelling.png \
go-home.png \
info.png \
insert-link.png \
format-text-bold.png \
format-text-italic.png \
format-text-strikethrough.png \
format-text-underline.png \
merge.png \
view-close.png \
view-fullscreen.png \
view-list-tree.png \
view-split-left-right.png \
view-split-top-bottom.png
